--- a/playbooks/roles/info/tasks/clients.yaml
+++ b/playbooks/roles/info/tasks/clients.yaml
@@ -16,5 +16,5 @@
   ansible.builtin.lineinfile:
     create: yes
     line: "{{ ansible_hostname }} {{ result.stdout }}"
-    path: "{{ tmp_dir }}/clients"
+    path: "{{ tmp_dir }}/{{ group_names[0] }}_clients"
     regex: "^{{ ansible_hostname }} "
