--- a/playbooks/roles/info/tasks/uname.yaml
+++ b/playbooks/roles/info/tasks/uname.yaml
@@ -10,5 +10,5 @@
   ansible.builtin.lineinfile:
     create: yes
     line: "{{ ansible_hostname }} {{ result.stdout }}"
-    path: "{{ tmp_dir }}/uname"
+    path: "{{ tmp_dir }}/{{ group_names[0] }}_uname"
     regex: "^{{ ansible_hostname }} "
