--- a/playbooks/roles/info/tasks/uptime.yaml
+++ b/playbooks/roles/info/tasks/uptime.yaml
@@ -15,5 +15,5 @@
   ansible.builtin.lineinfile:
     create: yes
     line: "{{ ansible_hostname }} Tor {{ tor_status.status.ExecMainStartTimestamp }} uptime {{ result.stdout }}"
-    path: "{{ tmp_dir }}/uptime"
+    path: "{{ tmp_dir }}/{{ group_names[0] }}_uptime"
     regex: "^{{ ansible_hostname }} "
