get rid of "special" and garthering facts

--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -1,18 +1,11 @@
 ---
-- name: Ansible defaults
-  ansible.builtin.setup:
-    gather_subset:
-      - "!all"
-      - "all_ipv4_addresses"
-    gather_timeout: 20
-
 - name: "Ensure that the tmp dir does exist: {{ tmp_dir }}"
   ansible.builtin.file:
     path: "{{ tmp_dir }}"
     state: directory
     mode: "0755"
 
-- name: Import hashed-fingerprint
+- name: Set hashed-fingerprint
   ansible.builtin.import_tasks: hashed-fingerprint.yaml
   tags:
     - bridgeline
