--- a/playbooks/roles/info/tasks/bridgeline.yaml
+++ b/playbooks/roles/info/tasks/bridgeline.yaml
@@ -15,11 +15,11 @@
   ansible.builtin.set_fact:
     _cert: "{{ result.stdout_lines[0] }}"
 
-- name: Set bridge lines in /tmp/bridgeline.txt
+- name: File results for bridgeline
   no_log: true
   delegate_to: localhost
   ansible.builtin.lineinfile:
-    line: "Bridge obfs4 {{ '%25s' | format(item) }}:{{ '%-5s' | format(obfs4_port) }} {{ hashed_fingerprint }} {{ _cert }} iat-mode=0  # {{ ansible_hostname }}"
+    line: "Bridge obfs4 {{ '%41s' | format(item) }}:{{ '%-5s' | format(obfs4_port) }} {{ hashed_fingerprint }} {{ _cert }} iat-mode=0  # {{ ansible_hostname }}"
     path: /tmp/{{ group_names[0] }}_bridgeline.txt
     create: yes
     mode: "0600"
