--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -31,6 +31,7 @@
   block:
     - name: Network
       ansible.builtin.import_tasks: network.yaml
+      when: ansible_bios_vendor == 'Hetzner'
       tags:
         - network
 
