--- a/playbooks/roles/setup/tasks/network.yaml
+++ b/playbooks/roles/setup/tasks/network.yaml
@@ -69,4 +69,4 @@
     jump: DNAT
 
 - name: Persist IPv6 rules
-  ansible.builtin.command: "ip6tables-save > /etc/iptables/rules.v6"
+  ansible.builtin.shell: "/usr/sbin/ip6tables-save > /etc/iptables/rules.v6"
