--- a/playbooks/roles/setup/tasks/network.yaml
+++ b/playbooks/roles/setup/tasks/network.yaml
@@ -75,7 +75,7 @@
     table: nat
     chain: PREROUTING
     protocol: tcp
-    destination: "! {{ _ipv6_prefix }}::/{{ item }}"
+    destination: "! {{ _ipv6_prefix }}::/118"
     to_destination: "{{ _ipv6 }}"
     jump: DNAT
 
