--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -69,3 +69,11 @@
     pre_reboot_delay: 0
     post_reboot_delay: 35
   when: not _uname.stdout_lines[0] == ansible_facts.packages[linux_image_arch][0].version
+
+- name: Ensure kernel crash dumps are made to /tmp
+  ansible.builtin.cron:
+    name: "core debug files"
+    special_time: reboot
+    job: "echo '/tmp/core.\\%e.\\%p.\\%s.\\%t' > /proc/sys/kernel/core_pattern"
+  tags:
+    - system-cron
