--- a/playbooks/setup.yaml
+++ b/playbooks/setup.yaml
@@ -1,7 +1,8 @@
 ---
 - name: Setup
   hosts:
-    - all
+    - public
+    - private
+    - snowflake
   roles:
     - role: setup
-    - role: info
