--- a/playbooks/roles/setup/files/snowflake-proxy.service
+++ b/playbooks/roles/setup/files/snowflake-proxy.service
@@ -6,7 +6,7 @@ After=network-online.target docker.socket firewalld.service
 Wants=network-online.target
 
 [Service]
-ExecStart=/usr/bin/proxy -capacity 0
+ExecStart=/usr/bin/proxy
 User=snowflake
 Group=snowflake
 # https://www.freedesktop.org/software/systemd/man/systemd.exec.html#Sandboxing
