--- a/playbooks/roles/info-snowflake/tasks/clients.yaml
+++ b/playbooks/roles/info-snowflake/tasks/clients.yaml
@@ -1,8 +1,8 @@
 ---
-- name: Get clients values of the (up to) last 12 hours (sorted from newest to oldest)
+- name: Get clients of the (up to) last 12 hours (sorted from newest to oldest)
   changed_when: false
   ansible.builtin.shell: >-
-    journalctl -u snowflake-proxy | tac | grep -m 12 -Eo '(were .* connections)' | awk '{ print $2 }' | xargs
+    journalctl -u snowflake-proxy -n 50 | tac | grep -m 12 -Eo '(were .* connections)' | awk '{ print $2 }' | xargs
   register: result
 
 - name: File results for clients
