--- a/playbooks/roles/info-tor/tasks/clients.yaml
+++ b/playbooks/roles/info-tor/tasks/clients.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Get unique clients values of the (up to) last 3 days (sorted from newest to oldest)
+- name: Get unique clients of the (up to) last 3 days (sorted from newest to oldest)
   changed_when: false
   ansible.builtin.shell: >-
     zgrep -h -F ' unique clients.' {{ log_notice }}.4.gz {{ log_notice }}.3.gz {{ log_notice }}.2.gz {{ log_notice }}.1 {{ log_notice }} 2>/dev/null |
