--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -16,3 +16,10 @@
   ansible.builtin.import_tasks: uname.yaml
   tags:
     - uname
+
+- name: Log unattended
+  ansible.builtin.import_tasks: log-unattended.yaml
+  tags:
+    - log
+    - log-unattended
+    - never
