--- a/playbooks/roles/info-tor/tasks/log-notice.yaml
+++ b/playbooks/roles/info-tor/tasks/log-notice.yaml
@@ -4,7 +4,7 @@
   ansible.builtin.command: /usr/bin/tail -n {{ log_lines }} {{ log_notice }}
   register: result
 
-- name: Results
+- name: Results in {{ log_notice }}
   ansible.builtin.debug:
     msg: "{{ result.stdout.split('\n') }}"
   when: result.stdout_lines | length > 0
