--- a/playbooks/roles/info-tor/tasks/log-warn.yaml
+++ b/playbooks/roles/info-tor/tasks/log-warn.yaml
@@ -2,7 +2,7 @@
 - name: Get last {{ log_lines }} lines of {{ log_warn }}
   changed_when: false
   ansible.builtin.shell: |
-    zgrep -H A 3 -e ' died' -e ' denied' -e 'obfs4' {{ log_warn }}* | tee
+    grep -v 'opening new log file.' {{ log_warn }} | tail -n 10
   register: result
 
 - name: Results of log-warn {{ log_lines }} last lines
